<?xml version="1.0" encoding="utf-8"?>

<!-- Define the options on the preferences screen  -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/initial_time_preference_description">

        <EditTextPreference
                android:key="initial_minutes_preference"
                android:title="@string/initial_minutes_preference"
                android:summary="@string/summary_initial_minutes_preference"
                android:dialogTitle="@string/dialog_title_initial_minutes_preference"
                android:numeric="integer"
                android:defaultValue="5"
                />
                

        <EditTextPreference
                android:key="initial_seconds_preference"
                android:title="@string/initial_seconds_preference"
                android:summary="@string/summary_initial_seconds_preference"
                android:dialogTitle="@string/dialog_title_initial_seconds_preference" 
                android:numeric="integer"
                android:defaultValue="0"
                />
                
        <EditTextPreference
                android:key="increment_preference"
                android:title="@string/increment_preference"
                android:summary="@string/summary_increment_preference"
                android:dialogTitle="@string/dialog_title_increment_preference" 
                android:numeric="integer"
                android:defaultValue="0"
                />
                
	    <ListPreference
           android:title="@string/delay_type_preference" 
           android:summary="@string/summary_delay_type_preference"
           android:key="delay_type_preference"
           android:defaultValue="Fischer"
           android:entries="@array/delay_type_descriptions"
           android:entryValues="@array/delay_type_values" />    
                
        <CheckBoxPreference
                android:key="allow_negative_time_preference"
                android:title="@string/allow_negative_time_preference"
                android:defaultValue="false"
                />

                
    </PreferenceCategory>

   <PreferenceCategory
            android:title="@string/display_options_preference_description">

        <CheckBoxPreference
        		android:key="screen_dim_preference"
                android:title="@string/screen_dim_preference"
                android:defaultValue="false"
                />
                
 	<CheckBoxPreference
        		android:key="show_move_count_preference"
                android:title="@string/show_move_count_preference"
                android:defaultValue="false"
                />                
                
   </PreferenceCategory>

    
</PreferenceScreen>

