<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="0"
    android:orientation="vertical"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/leftSpinnerContainer"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".1"
                android:gravity="center_vertical|left" >
                
                <FrameLayout
                    android:id="@+id/whiteSpinnerContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >
                </FrameLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/leftClockContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/whiteClock"
                    style="@style/clockStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" >
                </TextView>
            </FrameLayout>

            <Button
                android:id="@+id/reset_button"
                style="@android:style/MediaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/reset_button"
                android:textStyle="bold" >
            </Button>

            <ToggleButton
                android:id="@+id/pause_button"
                style="@android:style/MediaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_weight="0.2"
                android:gravity="center"
                android:textOff="@string/pauseoff_button"
                android:textOn="@string/pauseon_button"
                android:textStyle="bold" >
            </ToggleButton>

            <FrameLayout
                android:id="@+id/rightClockContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/blackClock"
                    style="@style/clockStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center" >
                </TextView>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/rightSpinnerContainer"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_weight=".1"
                android:gravity="center_vertical|right" >

                <FrameLayout
                    android:id="@+id/blackSpinnerContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" >
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </TableRow>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true" >

        <FrameLayout
            android:id="@+id/frameLayoutLeft"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/whiteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/white" >
            </ImageButton>

            <TextView
                android:id="@+id/whiteMoveCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:gravity="bottom"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" >
            </TextView>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayoutRight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/blackButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/black" >
            </ImageButton>

            <TextView
                android:id="@+id/blackMoveCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:gravity="bottom"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" >
            </TextView>
        </FrameLayout>
    </LinearLayout>

</TableLayout>